# TurboFire

./: .gitignore  README.md  makefile  run.sh
include/: Card.h  Deck.h  Game.h  ranks.h
mccfr/: kuhn.c  kuhn2.c
notes/: ai_usage_notes.txt
slop/: example_ranges.sh
slop/2026-01-18-solver/: makefile
slop/2026-01-18-solver/include/: GUI.h  Game.h  RangeParser.h
slop/2026-01-22-solver/: CMakeLists.txt  README.md  plan.txt
slop/2026-01-22-solver/src/: main.cpp
slop/2026-01-22-solver/src/core/: CMakeLists.txt  card.cpp  card.hpp  deck.cpp  deck.hpp  hand.cpp  hand.hpp  range.cpp  range.hpp
slop/2026-01-22-solver/src/gui/: CMakeLists.txt  action_panel.cpp  action_panel.hpp  card_selector.cpp  card_selector.hpp  main_window.cpp  main_window.hpp  progress_panel.cpp  progress_panel.hpp  range_grid.cpp  range_grid.hpp  strategy_grid.cpp  strategy_grid.hpp
slop/2026-01-22-solver/src/ompeval/: CMakeLists.txt  hand_evaluator.cpp  hand_evaluator.hpp  lookup_tables.cpp  lookup_tables.hpp
slop/2026-01-22-solver/src/solver/: CMakeLists.txt  game_state.cpp  game_state.hpp  game_tree.cpp  game_tree.hpp  mccfr.cpp  mccfr.hpp
slop/src/: GUI.c  Game.c  MCCFR.c  RangeParser.c  TurboFire.c
src/: Card.c  Deck.c  Game.c  TurboFire.c  calculate_rank_strength.c  maskplan.txt  ranks.c  turbofire.c
test/: rank_collision_test.c
